force-app/main/default/objects/Lead/fields/Age__c.field-meta.xml
<CustomField>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>