force-app/main/default/objects/Lead/fields/DNC_Is_Internal__c.field-meta.xml
<CustomField>
        <fullName>DNC_Is_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNC Internal</label>
        <type>Checkbox</type>
    </CustomField>