force-app/main/default/objects/Lead/fields/DNC_Phone_State__c.field-meta.xml
<CustomField>
        <fullName>DNC_Phone_State__c</fullName>
        <description>Most locations are 2 letter state codes, however 'NOVA SCOTIA - PRINCE EDWARD ISLAND' is the longest value.</description>
        <label>DNC Phone State</label>
        <length>40</length>
        <type>Text</type>
    </CustomField>