force-app/main/default/objects/Lead/fields/DSI_Address_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Address_Id__c</fullName>
        <description>address_key from DSI</description>
        <label>DSI Address Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>