force-app/main/default/objects/Lead/fields/DSI_Household_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Household_Id__c</fullName>
        <description>household_key from DSI</description>
        <label>DSI Household Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>