force-app/main/default/objects/Lead/fields/DSI_Person_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Person_Id__c</fullName>
        <description>person_key from DSI</description>
        <label>DSI Person Id</label>
        <length>50</length>
        <type>Text</type>
    </CustomField>