force-app/main/default/objects/Lead/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
        <fullName>Dwelling_Type__c</fullName>
        <label>Dwelling Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Dwelling_Types</valueSetName>
        </valueSet>
    </CustomField>