force-app/main/default/objects/Lead/fields/LeadTempId__c.field-meta.xml
<CustomField>
        <fullName>LeadTempId__c</fullName>
        <description>Temp ID used for initial lead/campaign loading mappings from Informatica</description>
        <label>LeadTempId</label>
        <length>32</length>
        <type>Text</type>
    </CustomField>