force-app/main/default/objects/Lead/fields/PMN_Address_Id_v2__c.field-meta.xml
<CustomField>
        <fullName>PMN_Address_Id_v2__c</fullName>
        <description>Address identifier of form zip5|zip4|house_num|unit_num|first_char_of_street</description>
        <label>PMN Address Id v2</label>
        <length>30</length>
        <type>Text</type>
    </CustomField>