force-app/main/default/objects/Lead/fields/Sync_to_Marketing_Cloud__c.field-meta.xml
<CustomField>
        <fullName>Sync_to_Marketing_Cloud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketing Cloud</label>
        <type>Checkbox</type>
    </CustomField>