force-app/main/default/objects/Lead/fields/Year_of_Birth__c.field-meta.xml
<CustomField>
        <fullName>Year_of_Birth__c</fullName>
        <label>Year of Birth</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>