force-app/main/default/objects/Lead/listViews/Lead_DNC.listView-meta.xml
<ListView>
        <fullName>Lead_DNC</fullName>
        <columns>LEAD.FIRST_NAME</columns>
        <columns>LEAD.LAST_NAME</columns>
        <columns>LEAD.PHONE</columns>
        <columns>DNC_Phone_State__c</columns>
        <columns>DNC_Is_Business__c</columns>
        <columns>DNC_Is_Federal__c</columns>
        <columns>DNC_Is_State__c</columns>
        <columns>DNC_Is_Internal__c</columns>
        <columns>DNC_Is_Landline_to_Wireless__c</columns>
        <columns>DNC_Is_Wireless_Block__c</columns>
        <columns>DNC_Is_Wireless_to_Landline__c</columns>
        <columns>FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Lead DNC</label>
    </ListView>